feat: spring core翻译至5.10.2

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -8632,7 +8632,1178 @@ public class AfterFinallyExample {
 
 **Around通知**
 
+最后一种通知是环绕通知。环绕通知“around”匹配的方法的执行。它有机会在方法运行之前和之后工作，并确定该方法何时，如何以及是否真的可以运行。如果您需要以线程安全的方式在执行方法前后共享状态（例如，启动和停止计时器），通常会使用环绕通知。始终使用满足您要求的最低强度的通知形式（也就是说，如果能用before通知就不要使用环绕通知）。
 
+通过使用@Around注解来声明通知。通知方法的第一个参数必须是ProceedingJoinPoint类型。在通知的主体中，在ProceedingJoinPoint上调用proceed()会导致基础方法运行。proceed方法也可以传Object[]参数。数组中的值用作方法执行的参数。
+
+> :information_source:使用带Object[]调用proceed的行为与AspectJ编译器编译的环绕通知proceed的行为有所不同。对于使用传统AspectJ 语言编写的通知，传给proceed参数的数量必须与传给环绕通知的参数相匹配（不是基础连接点的参数数量），并且传递给proceed 的给定位置的参数替代原始连接点的绑定到实体的值（如果现在没有意义，请不要担心）。Spring采用的方法更简单，并且与基于代理的仅执行语义的方法更匹配。如果您编译了为Spring编写的@AspectJ 切面，并使用AspectJ 编译器和注入器和带参数proceed，只需要意识到这种差异。有一种方法可以编写在Spring AOP和AspectJ中100％兼容的此类切面，这在[following section on advice parameters](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj-advice-params)部分中进行了讨论。
+
+以下示例显示了如何使用环绕通知：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Around;
+import org.aspectj.lang.ProceedingJoinPoint;
+
+@Aspect
+public class AroundExample {
+
+    @Around("com.xyz.myapp.CommonPointcuts.businessService()")
+    public Object doBasicProfiling(ProceedingJoinPoint pjp) throws Throwable {
+        // start stopwatch
+        Object retVal = pjp.proceed();
+        // stop stopwatch
+        return retVal;
+    }
+}
+```
+
+环绕通知返回的值是该方法调用者看到的返回值。例如，一个简单的缓存切面，缓存中有值时直接从缓存返回，缓存中无值时可以调用proceed()返回一个值。请注意，可以在环绕通知的主体中调用一次或多次proceed。
+
+**通知参数**
+
+Spring提供了各种类型的通知，这意味着您在通知签名中声明所需的参数（正如我们先前看到的returning 和throwing 示例），而不是一直使用Object[]。我们在本节会看到如何使参数和其他上下文值在通知主体中可用。首先，我们看一下如何编写通用通知，以找到通知当前正在通知的方法。
+
+**访问当前JoinPoint**
+
+任何通知方法都可以将org.aspectj.lang.JoinPoint声明为第一个参数（请注意，环绕通知是需要将JoinPoint的子类---ProceedingJoinPoint声明为第一个参数）。JoinPoint接口提供了大量有用的方法：
+
+- `getArgs()`: 返回方法实参。
+- `getThis()`:返回代理对象。
+- `getTarget()`: 返回目标对象。
+- `getSignature()`: 返回被通知的方法描述。
+- `toString()`:打印被通知的方法有用的描述。
+
+更多细节参考 [javadoc](https://www.eclipse.org/aspectj/doc/released/runtime-api/org/aspectj/lang/JoinPoint.html)。
+
+**传递参数给通知**
+
+我们已经看到了如何绑定返回的值或异常值（使用after returning和after throwing通知）。为了使通知主体可用参数值，您可以使用`args`的绑定形式。如果您在args表达式中使用参数名称代替类型名称，则在调用通知时将相应实参传递给形参。一个例子应该使这个更清楚。假设您要通知DAO操作执行，该操作以Account对象为第一个参数，并且你需要访问通知主体中的account 。您可以编写以下内容：
+
+```java
+@Before("com.xyz.myapp.CommonPointcuts.dataAccessOperation() && args(account,..)")
+public void validateAccount(Account account) {
+    // ...
+}
+```
+
+args(account,..)切点表达式有两个目的。首先，它限制了该方法至少有一个参数的那些方法执行的匹配，而该参数是Account的一个实例。其次，它通过account形参使实际Account对象在通知主体中可用。
+
+另一种写法是声明一个切点，该切点在匹配连接点时“provides” Account对象，然后在通知中引用已命名的切点：
+
+```java
+@Pointcut("com.xyz.myapp.CommonPointcuts.dataAccessOperation() && args(account,..)")
+private void accountDataAccessOperation(Account account) {}
+
+@Before("accountDataAccessOperation(account)")
+public void validateAccount(Account account) {
+    // ...
+}
+```
+
+有关更多详细信息，请参见AspectJ programming guide。
+
+代理对象（this），目标对象（target）和注解（@within，@target，@antotation和@args）都可以以类似的方式绑定。接下来的两个示例显示了如何匹配带@Auditable注解的方法执行并提取审计代码：
+
+@Auditable定义如下：
+
+```java
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface Auditable {
+    AuditCode value();
+}
+```
+
+匹配@Auditable方法执行的通知如下：
+
+```java
+@Before("com.xyz.lib.Pointcuts.anyPublicMethod() && @annotation(auditable)")
+public void audit(Auditable auditable) {
+    AuditCode code = auditable.value();
+    // ...
+}
+```
+
+**通知参数和泛型**
+
+Spring AOP可以处理类声明和方法参数中使用的泛型参数。假设您的泛型类型如下：
+
+```java
+public interface Sample<T> {
+    void sampleGenericMethod(T param);
+    void sampleGenericCollectionMethod(Collection<T> param);
+}
+```
+
+您可以通过指定通知参数类型来限制要拦截的方法：
+
+```java
+@Before("execution(* ..Sample+.sampleGenericMethod(*)) && args(param)")
+public void beforeSampleMethod(MyType param) {
+    // Advice implementation
+}
+```
+
+这种方法不适用于泛型集合。因此，您不能按以下方式定义切点：
+
+```java
+@Before("execution(* ..Sample+.sampleGenericCollectionMethod(*)) && args(param)")
+public void beforeSampleMethod(Collection<MyType> param) {
+    // Advice implementation
+}
+```
+
+为了完成这项工作，我们必须检查集合的每个元素，这是不合理的，因为我们也无法决定如何处理null值。要实现与此类似的东西，您必须传入Collection<?>类型的参数并手动检查元素的类型。
+
+**确定参数名称**
+
+通知调用中的绑定参数依赖于在切点表达式中匹配的名称。参数名称无法通过Java反射获得，因此Spring AOP使用以下策略来确定参数名称：
+
+- 如果参数名已被用户显示定义，则使用它。通知和切点注解都有一个可选的`argNames`属性，你可以使用它指定被注解的方法的参数名。这些参数名运行时可用，以下示例显示了如何使用argNames属性：
+
+  ```java
+  @Before(value="com.xyz.lib.Pointcuts.anyPublicMethod() && target(bean) && @annotation(auditable)",
+          argNames="bean,auditable")
+  public void audit(Object bean, Auditable auditable) {
+      AuditCode code = auditable.value();
+      // ... use code and bean
+  }
+  ```
+
+  如果第一个参数是JoinPoint，ProceedingJoinPoint或JoinPoint.StaticPart类型，则不必在argNames属性中包含它。例如，如果您修改了前面的通知以接收连接点对象，则argNames属性不必包括它：
+
+  ```java
+  @Before(value="com.xyz.lib.Pointcuts.anyPublicMethod() && target(bean) && @annotation(auditable)",
+          argNames="bean,auditable")
+  public void audit(JoinPoint jp, Object bean, Auditable auditable) {
+      AuditCode code = auditable.value();
+      // ... use code, bean, and jp
+  }
+  ```
+
+  对Joinpoint，ProceedingJoinPoint和JoinPoint.StaticPart的第一个参数的特殊处理，对于不收集任何其他连接点上下文的通知实例特别方便。在这种情况下，您可以省略argNames属性。例如，以下通知不必声明argNames属性：
+
+  ```java
+  @Before("com.xyz.lib.Pointcuts.anyPublicMethod()")
+  public void audit(JoinPoint jp) {
+      // ... use jp
+  }
+  ```
+
+- 使用“ argNames”属性有点笨拙，因此，如果尚未指定“ argNames”属性，Spring AOP会查看类的调试信息，并尝试从本地变量表确定参数名称。只要启用调试信息（至少`'-g:vars'`）编译类，则将存在此信息。使用此标志编译的后果是：（1）您的代码稍微易于理解（反向工程），（2）类文件大小非常大（通常是无关紧要的），（3）删除未使用的本地变量的优化不会被编译器应用。换句话说，您通过启用此标志来构建不会遇到任何困难。
+
+  > :information_source:如果一个@AspectJ切面由AspectJ 编译器(ajc)不使用debug信息编译，则无需添加argNames属性，因为编译器保留了所需的信息。
+
+- 如果没有使用debug信息编译代码，则Spring AOP试图推导绑定变量与参数的配对（例如，如果在切点表达式中只有一个变量，且通知方法仅有一个参数，则配对）。如果绑定的变量给出的信息是模糊的，则会抛出AmbiguousBindingException。
+
+- 如果以上所有策略失败，则抛出IllegalArgumentException
+
+**带参数的proceed**
+
+我们早些时候说过，我们将描述如何编写带参数的proceed调用以在Spring AOP和AspectJ都能工作。解决方案是确保通知签名按顺序绑定每个方法参数。以下示例显示了如何做到的：
+
+```java
+@Around("execution(List<Account> find*(..)) && " +
+        "com.xyz.myapp.CommonPointcuts.inDataAccessLayer() && " +
+        "args(accountHolderNamePattern)")
+public Object preProcessQueryPattern(ProceedingJoinPoint pjp,
+        String accountHolderNamePattern) throws Throwable {
+    String newPattern = preProcess(accountHolderNamePattern);
+    return pjp.proceed(new Object[] {newPattern});
+}
+```
+
+在许多情况下，您无论如何都会进行这种绑定（如前一个示例）。
+
+**通知顺序**
+
+当多个通知都想在同一连接点运行时会发生什么？Spring AOP遵循与AspectJ相同的优先规则，以确定通知执行的顺序。最高优先通知“on the way in”首先运行（因此，给定两个before 通知，高优先级的先运行）。连接点的"On the way out" ，最高优先级通知最后运行（因此，给定两个after 通知，高优先级的后运行）。
+
+当在不同切面定义的两个通知都需要在相同的连接点运行时，除非另外指定，否则执行顺序是未定义的。您可以通过指定优先级来控制执行顺序。可以使用一般的Spring方式即在切面类上实现`org.springframework.core.Ordered`接口或使用`@Order`注解。给定两个切面，`Ordered.getOrder()`（或注解值）返回值小的的切面具有更高的优先级。
+
+> :information_source:从概念上讲，特定切面的每种不同通知类型都可以直接应用于连接点。结果， @AfterThrowing的通知方法不应从 @After/ @AfterReturning方法中获得异常。
+>
+> 从Spring 5.2.7起，在同一@Aspect类中定义的需要在相同的连接点上运行的通知方法，会根据其通知类型按以下顺序分配优先级，从最高到最低的优先级：`@Around`, `@Before`, `@After`, `@AfterReturning`, `@AfterThrowing`。但是，请注意， @After通知方法将在同一切面的任何@AfterReturning或@AfterThrowing通知方法之后有效地调用，遵循AspectJ的"after finally advice"语义。
+>
+> 当在同一@Aspect类中定义的两种相同类型的通知（例如，两种 @After通知方法）都需要在同一连接点上运行时，顺序是不确定的（因为通过javac编译的类的反射没有办法检索源代码声明顺序）。考虑将此类通知方法合并成每个@Aspect类中的一个通知方法，或将通知部分重构到单独的@Aspect类，您可以通过Ordered或 @Order在该切面级别排序。
+
+
+
+### 5.4.5. 引入（Introductions ）
+
+Introductions （AspectJ中称为 inter-type声明）使一个切面能够声明，通知对象实现给定的接口，并代表这些对象提供该接口的实现。
+
+您可以使用@DeclareParents注解进行引入。该注解用于声明匹配类型具有新父类。例如，给定一个名为UsageTracked的接口和名为DefaultUsageTracked的该接口的实现，以下切面声明了所有服务接口的实现者还实现了UsageTracked接口（例如，通过JMX进行统计信息）：
+
+```java
+@Aspect
+public class UsageTracking {
+
+    @DeclareParents(value="com.xzy.myapp.service.*+", defaultImpl=DefaultUsageTracked.class)
+    public static UsageTracked mixin;
+
+    @Before("com.xyz.myapp.CommonPointcuts.businessService() && this(usageTracked)")
+    public void recordUsage(UsageTracked usageTracked) {
+        usageTracked.incrementUseCount();
+    }
+
+}
+```
+
+要实现的接口由注解字段的类型确定。@DeclareParents的value属性是一种AspectJ 类型模式。匹配类型的任何bean都会实现UsageTracked接口。请注意，在上一个示例的前通知中，服务bean可以直接用作UsageTracked接口的实现。如果以编程方式访问bean，您将编写以下内容：
+
+```java
+UsageTracked usageTracked = (UsageTracked) context.getBean("myService");
+```
+
+
+
+### 5.4.6. Aspect 实例化模型
+
+> :information_source:这是一个高级主题。如果您只是从AOP开始，则可以安全地跳过。
+
+默认情况下，应用程序上下文中每个切面都有一个实例。AspectJ称此为单例实例化模型。可以用生命周期定义切面。Spring支持AspectJ的`perthis`和`pertarget`实例化模型；当前不支持`percflow`，`percflowbelow`和`pertypewithin`。
+
+您可以通过在@Aspect注解中指定perthis子句来声明perthis切面。考虑以下示例：
+
+```java
+@Aspect("perthis(com.xyz.myapp.CommonPointcuts.businessService())")
+public class MyAspect {
+
+    private int someState;
+
+    @Before("com.xyz.myapp.CommonPointcuts.businessService()")
+    public void recordServiceUsage() {
+        // ...
+    }
+}
+```
+
+在前面的示例中，perthis子句的效果是，为执行业务服务的每个唯一服务对象创建一个切面实例（每个唯一的对象都绑定到与切点表达式匹配的连接点this）。在服务对象上首次调用方法时，创建了该切面实例。当服务对象脱离作用域时，该切面也脱离作用域。在创建切面实例之前，其中没有任何通知运行。一旦创建了切面实例，且在服务对象是与此切面关联的对象时，就会在匹配的连接点上运行通知。有关per子句的更多信息，请参见AspectJ Programming Guide。
+
+pertarget实例模型的工作方式与perthis完全相同，但它为匹配的连接点处的每个唯一目标对象创建一个切面实例。
+
+### 5.4.7. AOP示例
+
+既然您已经看到了所有组成部分如何工作，我们可以将它们放在一起做一些有用的事情。
+
+由于并发问题（例如，死锁），有时会导致业务服务的执行失败。如果操作被重新执行，则可能在下一次尝试中取得成功。对于在这种情况下重试的业务服务（幂等的操作不需要返回用户以解决冲突），我们要透明地重试操作，以避免客户看到PessimisticLockingFailureException。该要求清楚地跨越了服务层中的多个服务，因此是通过切面实施的理想选择。
+
+因为我们想重试操作，所以我们需要使用环绕通知，以便我们可以多次调用proceed。以下列表显示了基本切面实现：
+
+```java
+@Aspect
+public class ConcurrentOperationExecutor implements Ordered {
+
+    private static final int DEFAULT_MAX_RETRIES = 2;
+
+    private int maxRetries = DEFAULT_MAX_RETRIES;
+    private int order = 1;
+
+    public void setMaxRetries(int maxRetries) {
+        this.maxRetries = maxRetries;
+    }
+
+    public int getOrder() {
+        return this.order;
+    }
+
+    public void setOrder(int order) {
+        this.order = order;
+    }
+
+    @Around("com.xyz.myapp.CommonPointcuts.businessService()")
+    public Object doConcurrentOperation(ProceedingJoinPoint pjp) throws Throwable {
+        int numAttempts = 0;
+        PessimisticLockingFailureException lockFailureException;
+        do {
+            numAttempts++;
+            try {
+                return pjp.proceed();
+            }
+            catch(PessimisticLockingFailureException ex) {
+                lockFailureException = ex;
+            }
+        } while(numAttempts <= this.maxRetries);
+        throw lockFailureException;
+    }
+}
+```
+
+请注意，该切面实现了Ordered接口，因此我们可以将切面的优先级设置为高于事务通知的优先级（每次重试时，我们都希望进行新的事务）。maxRetries和order属性均由Spring配置。主要的行动发生在doConcurrentOperation环绕通知中。请注意，目前，我们将重试逻辑应用于每个businessService()。我们尝试proceed，如果我们以PessimisticLockingFailureException失败，除非我们用尽了所有重试尝试，否则我们会再次尝试。
+
+对应的Spring配置如下：
+
+```xml
+<aop:aspectj-autoproxy/>
+
+<bean id="concurrentOperationExecutor" class="com.xyz.myapp.service.impl.ConcurrentOperationExecutor">
+    <property name="maxRetries" value="3"/>
+    <property name="order" value="100"/>
+</bean>
+```
+
+为了完善该切面，以便它仅重试幂等操作，我们可以定义以下`Idempotent`注解：
+
+```java
+@Retention(RetentionPolicy.RUNTIME)
+public @interface Idempotent {
+    // marker annotation
+}
+```
+
+然后，我们可以使用注解来注释服务操作的实现。切面变为@Idempotent匹配切点表达式时才重试，如下所示：
+
+```java
+@Around("com.xyz.myapp.CommonPointcuts.businessService() && " +
+        "@annotation(com.xyz.myapp.service.Idempotent)")
+public Object doConcurrentOperation(ProceedingJoinPoint pjp) throws Throwable {
+    // ...
+}
+```
+
+
+
+## 5.5. 基于Schema的AOP支持
+
+如果您喜欢基于XML的风格，Spring还提供了使用`aop`名称空间标签定义切面的支持。@AspectJ支持的切点表达式和通知种类XML格式也支持。因此，在本节中，我们将重点放在该语法上，并将读者推荐上一节中的讨论（([@AspectJ support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj)），以理解编写切点表达式和通知参数的绑定。
+
+要使用本节中描述的aop 名称空间标签，您需要导入`spring-aop`schema，如 [XML Schema-based configuration](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#xsd-schemas)中所述。有关如何导入aop名称空间中的标签，请参见[the AOP schema](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#xsd-schemas-aop) 。
+
+在您的Spring配置中，必须将所有切面和通知元素放置在`<aop:config>`元素中（您可以在应用程序上下文配置中具有多个`<aop:config>`元素）。一个`<aop:config>`元素可以包切点，通知和切面元素（请注意，必须按该顺序声明这些内容）。
+
+> :exclamation:`<aop:config>`配置样式大量利用了spring的 [auto-proxying](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-autoproxy)机制。如果您已经通过使用BeanNameAutoProxyCreator或类似的东西来使用明确的auto-proxying ，则可能会导致问题（例如通知不被织入）。建议的用法模式是仅使用<aop:config>样式或仅使用AutoProxyCreator样式，并且永远不要混合它们。
+
+### 5.5.1. 声明切面
+
+当您使用schema支持时，一个切面是一个常规Java对象，该对象在Spring应用程序上下文中定义为bean。状态和行为是在对象的字段和方法中捕获的，XML中捕获了切点和通知信息。
+
+您可以通过使用`<aop:aspect>`元素来声明切面，并使用`ref`属性引用bean，如下示例显示：
+
+```java
+<aop:config>
+    <aop:aspect id="myAspect" ref="aBean">
+        ...
+    </aop:aspect>
+</aop:config>
+
+<bean id="aBean" class="...">
+    ...
+</bean>
+```
+
+当然，可以配置切面后面的bean（在这种情况下为aBean），就像其他任何Spring bean一样注入依赖。
+
+### 5.5.2. 声明切面
+
+您可以在`<aop:config>`元素中声明已命名的切点，让切点定义在几个切面和通知之间共享。
+
+表示服务层中任何业务服务执行的切点表达式可以定义如下：
+
+```xml
+<aop:config>
+
+    <aop:pointcut id="businessService"
+        expression="execution(* com.xyz.myapp.service.*.*(..))"/>
+
+</aop:config>
+```
+
+请注意，切点表达式本身正在使用与 [@AspectJ support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj)中所述的相同AspectJ切点表达式语言。如果您使用基于schema的声明样式，则可以使用切点表达式引用定在类型中(@Aspects)已命名的切点。定义上述切点的另一种方式如下：
+
+```java
+<aop:config>
+
+    <aop:pointcut id="businessService"
+        expression="com.xyz.myapp.CommonPointcuts.businessService()"/>
+
+</aop:config>
+```
+
+假设您在[Sharing Common Pointcut Definitions](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-common-pointcuts)中所述具有CommonPointcuts切面。
+
+然后，在一个切面声明一个切点与声明顶层切点非常相似，如以下示例所示：
+
+```xml
+<aop:config>
+
+    <aop:aspect id="myAspect" ref="aBean">
+
+        <aop:pointcut id="businessService"
+            expression="execution(* com.xyz.myapp.service.*.*(..))"/>
+
+        ...
+    </aop:aspect>
+
+</aop:config>
+```
+
+与@AspectJ 切面的方式几乎相同，使用基于schema 的定义样式声明的切点可以收集连接点上下文。例如，以下切点将this对象作为连接点上下文收集，并将其传递给通知：
+
+```xml
+<aop:config>
+
+    <aop:aspect id="myAspect" ref="aBean">
+
+        <aop:pointcut id="businessService"
+            expression="execution(* com.xyz.myapp.service.*.*(..)) &amp;&amp; this(service)"/>
+
+        <aop:before pointcut-ref="businessService" method="monitor"/>
+
+        ...
+    </aop:aspect>
+
+</aop:config>
+```
+
+通知必须通过包含匹配的名称参数来声明以接收连接点上下文，如下所示：
+
+```java
+public void monitor(Object service) {
+    // ...
+}
+```
+
+当结合切点表达时，`＆amp;＆amp;`在XML文档中很笨拙，因此您可以分别使用and，or，not代替例&&，||， 和 !。上一个示例中的切点可以重写为：
+
+```xml
+<aop:config>
+
+    <aop:aspect id="myAspect" ref="aBean">
+
+        <aop:pointcut id="businessService"
+            expression="execution(* com.xyz.myapp.service.*.*(..)) and this(service)"/>
+
+        <aop:before pointcut-ref="businessService" method="monitor"/>
+
+        ...
+    </aop:aspect>
+</aop:config>
+```
+
+请注意，以这种方式定义的切点由其XML id引用，不能用作已命名切点以形成复合切点。因此，基于schema的定义样式中的命名切点支持比@AspectJ样式提供的定义样式更有限制。
+
+### 5.5.3. 声明通知
+
+基于schema的AOP支持使用与@AspectJ 样式相同的五种通知，并且它们具有完全相同的语义。
+
+**Before通知**
+
+Before通知在匹配的方法执行之前运行。它在`<aop:aspect>`内通过`<aop:before>`声明，如以下示例所示:
+
+```xml
+<aop:aspect id="beforeExample" ref="aBean">
+
+    <aop:before
+        pointcut-ref="dataAccessOperation"
+        method="doAccessCheck"/>
+
+    ...
+
+</aop:aspect>
+```
+
+在这里，dataAccessOperation是`<aop:config>`层定义的切点的id。为了内联定义切点，请用pointcut属性替换pointcut-ref属性，如下：
+
+```xml
+<aop:aspect id="beforeExample" ref="aBean">
+
+    <aop:before
+        pointcut="execution(* com.xyz.myapp.dao.*.*(..))"
+        method="doAccessCheck"/>
+
+    ...
+</aop:aspect>
+```
+
+正如我们在对@AspectJ样式的讨论中指出的那样，使用命名的切点可以提高代码的可读性。
+
+method属性标识提供通知主体的方法（doAccessCheck）。必须为包含通知的切面元素引用的bean定义此方法。在执行数据访问操作之前（通过切点表达式匹配的方法执行连接点），bean上的doAccessCheck方法被调用。
+
+**After Returning 通知**
+
+After returning通知在匹配的方法执行正常完成时运行。它声明在`<aop:aspect>`内。以下示例显示了如何声明它：
+
+```xml
+<aop:aspect id="afterReturningExample" ref="aBean">
+
+    <aop:after-returning
+        pointcut-ref="dataAccessOperation"
+        method="doAccessCheck"/>
+
+    ...
+</aop:aspect>
+```
+
+就像在@AspectJ 样式中一样，您可以在通知主体中获得返回值。为此，请使用returning属性来指定应传递返回值的参数的名称，如以下示例所示：
+
+```xml
+<aop:aspect id="afterReturningExample" ref="aBean">
+
+    <aop:after-returning
+        pointcut-ref="dataAccessOperation"
+        returning="retVal"
+        method="doAccessCheck"/>
+
+    ...
+</aop:aspect>
+```
+
+doAccessCheck方法必须声明一个名为retVal的参数。此参数的类型以与@AfterReturning的描述相同的方式约束匹配。例如，您可以按以下方式声明该方法签名：
+
+```java
+public void doAccessCheck(Object retVal) {...
+```
+
+**After Throwing 通知**
+
+After throwing 通知在匹配的方法抛异常退出时运行。它通过使用`after-throwing`声明在`<aop:aspect>`内。以下示例显示了如何声明它：
+
+```xml
+<aop:aspect id="afterThrowingExample" ref="aBean">
+
+    <aop:after-throwing
+        pointcut-ref="dataAccessOperation"
+        method="doRecoveryActions"/>
+
+    ...
+</aop:aspect>
+```
+
+与@AspectJ 风格一样，您可以在通知主体中获得异常。为此，请使用`throwing`属性来指定应用来传递参数的名称：
+
+```xml
+<aop:aspect id="afterThrowingExample" ref="aBean">
+
+    <aop:after-throwing
+        pointcut-ref="dataAccessOperation"
+        throwing="dataAccessEx"
+        method="doRecoveryActions"/>
+
+    ...
+</aop:aspect>
+```
+
+doRecoveryActions方法必须声明一个名为dataAccessEx的参数。此参数的类型以与 @AfterThrowing所述相同的方式约束匹配。例如，方法签名可以声明如下:
+
+```java
+public void doRecoveryActions(DataAccessException dataAccessEx) {...
+```
+
+**After (Finally) 通知**
+
+After (finally)通知在匹配方法执行退出后运行。您可以通过使用after元素来声明它，如以下示例所示：
+
+```xml
+<aop:aspect id="afterFinallyExample" ref="aBean">
+
+    <aop:after
+        pointcut-ref="dataAccessOperation"
+        method="doReleaseLock"/>
+
+    ...
+</aop:aspect>
+```
+
+**Around 通知**
+
+与[前面章节](#5.4.4. 声明通知)所述，你可以使用`aop:around`元素声明环绕通知。
+
+```xml
+<aop:aspect id="aroundExample" ref="aBean">
+
+    <aop:around
+        pointcut-ref="businessService"
+        method="doBasicProfiling"/>
+
+    ...
+</aop:aspect>
+```
+
+如下示例所示，doBasicProfiling通知的实现可能与@AspectJ示例（当然除去注解）完全相同：
+
+```java
+public Object doBasicProfiling(ProceedingJoinPoint pjp) throws Throwable {
+    // start stopwatch
+    Object retVal = pjp.proceed();
+    // stop stopwatch
+    return retVal;
+}
+```
+
+**通知参数**
+
+如果您希望明确指定通知方法的参数名称（不依赖于先前描述的检测策略），则可以使用通知元素的arg-names属性来做到这一点，该通知元素以与通知注解（如[Determining Argument Names](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj-advice-params-names)中所述）中argNames属性相同的方式对待。以下示例显示了如何在XML中指定参数名称：
+
+```xml
+<aop:before
+    pointcut="com.xyz.lib.Pointcuts.anyPublicMethod() and @annotation(auditable)"
+    method="audit"
+    arg-names="auditable"/>
+```
+
+arg-names属性接受逗号分隔的参数名称列表。
+
+以下基于XSD的方法的示例显示了与许多强类型参数结合使用的通知：
+
+```java
+package x.y.service;
+
+public interface PersonService {
+
+    Person getPerson(String personName, int age);
+}
+
+public class DefaultPersonService implements PersonService {
+
+    public Person getPerson(String name, int age) {
+        return new Person(name, age);
+    }
+}
+```
+
+接下来是切面。请注意，`profile(..)`方法接受许多强类型参数的，第一个参数恰好是用于进行方法调用的连接点。此参数的存在表明`profile(..)`应作为`around`通知，如以下示例所示：
+
+```java
+package x.y;
+
+import org.aspectj.lang.ProceedingJoinPoint;
+import org.springframework.util.StopWatch;
+
+public class SimpleProfiler {
+
+    public Object profile(ProceedingJoinPoint call, String name, int age) throws Throwable {
+        StopWatch clock = new StopWatch("Profiling for '" + name + "' and '" + age + "'");
+        try {
+            clock.start(call.toShortString());
+            return call.proceed();
+        } finally {
+            clock.stop();
+            System.out.println(clock.prettyPrint());
+        }
+    }
+}
+```
+
+最后，以下示例XML配置影响特定连接点的环绕通知的执行：
+
+```xml
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:aop="http://www.springframework.org/schema/aop"
+    xsi:schemaLocation="
+        http://www.springframework.org/schema/beans https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/aop https://www.springframework.org/schema/aop/spring-aop.xsd">
+
+    <!-- this is the object that will be proxied by Spring's AOP infrastructure -->
+    <bean id="personService" class="x.y.service.DefaultPersonService"/>
+
+    <!-- this is the actual advice itself -->
+    <bean id="profiler" class="x.y.SimpleProfiler"/>
+
+    <aop:config>
+        <aop:aspect ref="profiler">
+
+            <aop:pointcut id="theExecutionOfSomePersonServiceMethod"
+                expression="execution(* x.y.service.PersonService.getPerson(String,int))
+                and args(name, age)"/>
+
+            <aop:around pointcut-ref="theExecutionOfSomePersonServiceMethod"
+                method="profile"/>
+
+        </aop:aspect>
+    </aop:config>
+
+</beans>
+```
+
+考虑下列驱动程序脚本：
+
+```java
+import org.springframework.beans.factory.BeanFactory;
+import org.springframework.context.support.ClassPathXmlApplicationContext;
+import x.y.service.PersonService;
+
+public final class Boot {
+
+    public static void main(final String[] args) throws Exception {
+        BeanFactory ctx = new ClassPathXmlApplicationContext("x/y/plain.xml");
+        PersonService person = (PersonService) ctx.getBean("personService");
+        person.getPerson("Pengo", 12);
+    }
+}
+```
+
+使用这样的引导类，我们将获得类似于标准输出的以下输出：
+
+```java
+StopWatch 'Profiling for 'Pengo' and '12'': running time (millis) = 0
+-----------------------------------------
+ms     %     Task name
+-----------------------------------------
+00000  ?  execution(getFoo)
+```
+
+**通知顺序**
+
+当需要在相同的连接点（执行中的方法）上运行多个通知时，顺序规则如[Advice Ordering](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj-advice-ordering)所述。各个切面之间的优先级是通过`<aop:aspect>`元素中的`order`属性确定的，或者是将` @Order`注解添加到bean或使bean实现Ordered接口。
+
+> :information_source:与在同一@Aspect类中定义的通知方法的优先规则相反，当在`<aop:aspect>`同一元素中定义的两个通知都需要在同一连接点上运行时，该优先级是由通知元素的顺序确定的。这些通知元素在封闭式`<aop:aspect>`元素中声明，从最高到最低的优先级。
+>
+> 例如，给出适用于同一连接点的相同`<aop:aspect>`元素中定义的around通知和before通知，以确保around通知的优先级高于before通知，即`<aop:around>`必须在`<aop:before>`元素之前。
+>
+> 作为一般的经验法则，如果您发现适用于同一连接点的相同`<aop:aspect>`元素中定义了多个通知，考虑合并`<aop:aspect>`元素或将通知拆分到分开的`<aop:aspect>`元素中。
+
+### 5.5.4 Introductions
+
+您可以通过在`aop:aspect`中使用`aop:declare-parents`元素进行introduction 。您可以使用aop:declare-parents元素来声明匹配类型具有新的parent。例如，给定一个名为UsageTracked的接口和名为DefaultUsageTracked的该接口的实现，以下切面声明了所有服务接口的实现者还实现了UsageTracked接口。（例如，为了通过JMX暴露统计信息。）
+
+```xml
+<aop:aspect id="usageTrackerAspect" ref="usageTracking">
+
+    <aop:declare-parents
+        types-matching="com.xzy.myapp.service.*+"
+        implement-interface="com.xyz.myapp.service.tracking.UsageTracked"
+        default-impl="com.xyz.myapp.service.tracking.DefaultUsageTracked"/>
+
+    <aop:before
+        pointcut="com.xyz.myapp.CommonPointcuts.businessService()
+            and this(usageTracked)"
+            method="recordUsage"/>
+
+</aop:aspect>
+```
+
+然后，usageTracking bean的可能包含以下方法：
+
+```java
+public void recordUsage(UsageTracked usageTracked) {
+    usageTracked.incrementUseCount();
+}
+```
+
+要实现的接口由implement-interface属性确定。类型匹配属性的值是AspectJ类型模式。匹配类型的任何bean都会实现UsageTracked接口。请注意，在上一个示例的before 通知中，服务bean可以直接用作UsageTracked接口的实现。要以编程方式访问bean，您可以编写以下内容：
+
+```java
+UsageTracked usageTracked = (UsageTracked) context.getBean("myService");
+```
+
+
+
+### 5.5.5. Aspect实例化模型
+
+基于schema定义的切面模式唯一支持的实例化模型是单例模型。其他实例化模型可以在未来的版本中得到支持。
+
+### 5.5.6. Advisors
+
+“advisors”的概念来自Spring定义的AOP支持，并且在AspectJ中没有直接等效。advisor就像一个小的独立切面，有一个通知。通知本身由bean代表，必须实现[Advice Types in Spring](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-api-advice-types)中描述的通知接口之一。advisor可以利用AspectJ 切点表达式。
+
+Spring用`<aop:advisor>`元素支持advisor概念。您最常看到它与事务通知一起使用，该通知在Spring中也具有自己的名称空间。以下示例显示了advisor：
+
+```xml
+<aop:config>
+
+    <aop:pointcut id="businessService"
+        expression="execution(* com.xyz.myapp.service.*.*(..))"/>
+
+    <aop:advisor
+        pointcut-ref="businessService"
+        advice-ref="tx-advice"/>
+
+</aop:config>
+
+<tx:advice id="tx-advice">
+    <tx:attributes>
+        <tx:method name="*" propagation="REQUIRED"/>
+    </tx:attributes>
+</tx:advice>
+```
+
+除了前面示例中使用的pointcut-ref属性外，您还可以使用pointcut属性来定义内联切点表达式。
+
+为了定义advisor的优先级，以便通知可以按序执行，请使用order属性来定义advisor的Ordered值。
+
+### 5.5.7. 基于Schema 的AOP示例
+
+本节显示了从[AOP示例](#5.4.7. AOP示例)重写的schema版的示例。
+
+```java
+public class ConcurrentOperationExecutor implements Ordered {
+
+    private static final int DEFAULT_MAX_RETRIES = 2;
+
+    private int maxRetries = DEFAULT_MAX_RETRIES;
+    private int order = 1;
+
+    public void setMaxRetries(int maxRetries) {
+        this.maxRetries = maxRetries;
+    }
+
+    public int getOrder() {
+        return this.order;
+    }
+
+    public void setOrder(int order) {
+        this.order = order;
+    }
+
+    public Object doConcurrentOperation(ProceedingJoinPoint pjp) throws Throwable {
+        int numAttempts = 0;
+        PessimisticLockingFailureException lockFailureException;
+        do {
+            numAttempts++;
+            try {
+                return pjp.proceed();
+            }
+            catch(PessimisticLockingFailureException ex) {
+                lockFailureException = ex;
+            }
+        } while(numAttempts <= this.maxRetries);
+        throw lockFailureException;
+    }
+}
+```
+
+> :information_source:该类与@AspectJ示例中使用的类相同，但已删除注解。
+
+相应的Spring配置如下：
+
+```xml
+<aop:config>
+
+    <aop:aspect id="concurrentOperationRetry" ref="concurrentOperationExecutor">
+
+        <aop:pointcut id="idempotentOperation"
+            expression="execution(* com.xyz.myapp.service.*.*(..))"/>
+
+        <aop:around
+            pointcut-ref="idempotentOperation"
+            method="doConcurrentOperation"/>
+
+    </aop:aspect>
+
+</aop:config>
+
+<bean id="concurrentOperationExecutor"
+    class="com.xyz.myapp.service.impl.ConcurrentOperationExecutor">
+        <property name="maxRetries" value="3"/>
+        <property name="order" value="100"/>
+</bean>
+```
+
+```java
+@Retention(RetentionPolicy.RUNTIME)
+public @interface Idempotent {
+    // marker annotation
+}
+```
+
+```xml
+<aop:pointcut id="idempotentOperation"
+        expression="execution(* com.xyz.myapp.service.*.*(..)) and
+        @annotation(com.xyz.myapp.service.Idempotent)"/>
+```
+
+
+
+## 5.6. 选择哪种AOP风格
+
+一旦确定一个切面是实现给定要求的最佳方法，您如何在使用Spring AOP或AspectJ以及Aspect 语言（代码）样式， @AspectJ注解样式或Spring XML样式之间做出决定？这些决定受许多因素的影响，包括应用程序要求，开发工具和团队对AOP的熟悉程度。
+
+### 5.6.1. Spring AOP或者完全AspectJ？
+
+使用最简单的功能。Spring AOP比使用AspectJ更简单，因为不需要将AspectJ编译器 /注入器引入到您的开发和构建过程中。如果您只需要通知Spring bean上的操作执行，则Spring AOP是正确的选择。如果您需要通知未由Spring容器管理的对象（例如，通常是域对象），则需要使用AspectJ。如果您希望通知简单的方法执行以外的连接点（例如，字段获取或设置连接点等），则还需要使用AspectJ 。
+
+当您使用AspectJ时，您可以选择AspectJ 语言语法（也称为“代码样式”）或@AspectJ 注解样式。显然，如果您不使用Java 5+，则为您做出了选择：使用代码样式。如果切面在您的设计中起着重要作用，并且您可以将 [AspectJ Development Tools (AJDT)](https://www.eclipse.org/ajdt/)插件用于Eclipse，那么AspectJ 语言语法是首选选项。它更干净，更简单，因为该语言是专门设计用于编写切面的。如果您不使用Eclipse或只有一些在应用程序中非主要的切面，则您可能需要考虑使用@AspectJ 样式，在IDE中坚持常规的Java编译，并在构建脚本中添加一个切面编织阶段。
+
+### 5.6.2. @AspectJ 还是 XML？
+
+如果您选择使用Spring AOP，则可以选择@AspectJ 或XML样式。有各种各样的权衡要考虑。
+
+XML样式可能是现有的Spring用户最熟悉的，它得到了真正的POJOs的支持。当使用AOP作为配置企业服务的工具时，XML可能是一个不错的选择（一个很好的测试是，您是否认为点切点表达式是您可能想独立更改的配置的一部分）。借助XML样式，可以说从系统中存在哪些切面可以说是更清楚的。
+
+XML样式有两个缺点。首先，它不会在一个地方完全封装需求的实现。DRY 原则说，应该对系统中的任何知识进行单一的，明确的，权威的表示。当使用XML样式时，如何实现要求的知识将分散在配置文件中的Bean类和XML的声明中。当您使用@AspectJ 样式时，此信息将封装在单个模块中：该切面。其次，XML样式的表达方式比@AspectJ 样式更有限制：仅支持“ 单例”切面实例化模型，并且不可能将在XML中声明的切点组合在一起。例如，在@AspectJ 样式中，您可以写出以下内容：
+
+```java
+@Pointcut("execution(* get*())")
+public void propertyAccess() {}
+
+@Pointcut("execution(org.xyz.Account+ *(..))")
+public void operationReturningAnAccount() {}
+
+@Pointcut("propertyAccess() && operationReturningAnAccount()")
+public void accountPropertyAccess() {}
+```
+
+在XML样式中，您可以声明前两个切点：
+
+```xml
+<aop:pointcut id="propertyAccess"
+        expression="execution(* get*())"/>
+
+<aop:pointcut id="operationReturningAnAccount"
+        expression="execution(org.xyz.Account+ *(..))"/>
+```
+
+XML方法的缺点是，您不能通过组合这些定义来定义accountPropertyAccess切点。
+
+@AspectJ 样式支持其他实例化模型和更丰富的切点组合。它具有将切面作为模块化单元的优势。它还具有一个优势，即@AspectJ 切面都可以被Spring AOP和AspectJ理解（并因此消费）。因此，如果稍后您确定需要AspectJ的功能来实现其他要求，则可以轻松地迁移到经典的AspectJ 设置。总而言之，Spring团队更喜欢@AspectJ 样式用于自定义切面除了简单的企业服务配置。
+
+## 5.7. 混合Aspect类型
+
+可以通过使用 auto-proxying支持，schema定义`<aop:aspect>`切面，`<aop:advisor>`声明advisors，甚至是相同配置中其他样式的代理和拦截器。所有这些都是通过使用相同的基础支持机制来实现的，并且可以在没有任何困难的情况下共存。
+
+## 5.8. 代理机制
+
+Spring AOP使用JDK 动态代理 或CGLIB为给定目标对象创建代理。JDK 动态代理内置在JDK中，而CGLIB是一个常见的开源类定义库（重新打包到spring-core）。
+
+如果要代理的目标对象至少实现一个接口，则使用JDK动态代理。目标类型实现的所有接口均被代理。如果目标对象未实现任何接口，则将创建CGLIB代理。
+
+如果您想强制使用CGLIB代理（例如，为代理针对目标对象定义的每个方法，不仅是由其接口实现的对象），则可以这样做。但是，您应该考虑以下问题：
+
+- 使用CGLIB，不能通知final方法，因为在运行时生成的子类中不能重写它们。
+- 从Spring 4.0开始，由于CGLIB代理实例是通过Objenesis创建的，因此代理对象的构造函数不再被调用。只有当您的JVM不允许绕过构造函数时，您可能会看到Spring AOP支持的双重调用和相应的调试日志条目。
+
+要强制使用CGLIB代理，请设置`<aop:config>`元素的proxy-target-class属性的值为true，如下：
+
+```xml
+<aop:config proxy-target-class="true">
+    <!-- other beans defined here... -->
+</aop:config>
+```
+
+当您使用@AspectJ auto-proxy支持时要强制CGLIB代理，请设置`<aop:aspectj-autoproxy>`的proxy-target-class属性为true，如下所示：
+
+```xml
+<aop:aspectj-autoproxy proxy-target-class="true"/>
+```
+
+> :information_source:多个`<aop:config/>`部分在运行时折叠成单个统一的auto-proxy创建者，该创建者应用了任何`<aop:config/>`的最强代理设置（通常来自不同的xml bean定义文件）。这也适用于`<tx:annotation-driven/>`和`<aop:aspectj-autoproxy/>`元素。
+>
+> 要明确，在`<tx:annotation-driven/>`，`<aop:aspectj-autoproxy/>`或`<aop:config/>`元素上，使用`proxy-target-class="true"`强制他们三个都使用CGLIB代理。
+
+### 5.8.1. 理解AOP代理
+
+Spring AOP是基于代理的。在编写自己的切面或使用Spring框架提供的任何基于AOP切面之前，您的上一个语句的实际含义至关重要。
+
+首先考虑具有纯净的，未代理的，没有特殊性的，直接的对象引用的情况，如以下代码段所示：
+
+```java
+public class SimplePojo implements Pojo {
+
+    public void foo() {
+        // this next method invocation is a direct call on the 'this' reference
+        this.bar();
+    }
+
+    public void bar() {
+        // some logic...
+    }
+}
+```
+
+如果您在对象引用上调用方法，则该方法直接在该对象引用上调用，如以下图像和列表所示：
+
+![aop proxy plain pojo call](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/images/aop-proxy-plain-pojo-call.png)
+
+
+
+```java
+public class Main {
+
+    public static void main(String[] args) {
+        Pojo pojo = new SimplePojo();
+        // this is a direct method call on the 'pojo' reference
+        pojo.foo();
+    }
+}
+```
+
+当客户端代码具有代理时，情况会略有变化。考虑以下图和代码段：
+
+![aop proxy call](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/images/aop-proxy-call.png)
+
+```java
+public class Main {
+
+    public static void main(String[] args) {
+        ProxyFactory factory = new ProxyFactory(new SimplePojo());
+        factory.addInterface(Pojo.class);
+        factory.addAdvice(new RetryAdvice());
+
+        Pojo pojo = (Pojo) factory.getProxy();
+        // this is a method call on the proxy!
+        pojo.foo();
+    }
+}
+```
+
+这里要理解的关键是，Main类的main(..)方法内的客户端代码具有对代理的引用。这意味着该对象引用上的方法调用是对代理上的调用。结果，代理可以将与该特定方法调用相关的所有拦截器（通知）委派。但是，一旦调用最终到达了目标对象（在这种情况下，SimplePojo引用），它可能会自行调用任何方法，例如this.bar()或this.foo()，而不是代理调用。这具有重要的含义。这意味着自我调用不会导致与方法调用相关的通知有机会运行。
+
+好的，那该怎么办？最好的方法（在这里宽松地使用了“最佳”一词）是重构代码，以免自我调用。这确实需要您一些工作，但这是最好的，最少的侵入性方法。下一个方法绝对是可怕的，我们不愿指出这一点，正是因为它是如此可怕。您可以（对我们来说很痛苦）完全将逻辑与Spring AOP捆绑起来，如以下示例所示：
+
+```java
+public class SimplePojo implements Pojo {
+
+    public void foo() {
+        // this works, but... gah!
+        ((Pojo) AopContext.currentProxy()).bar();
+    }
+
+    public void bar() {
+        // some logic...
+    }
+}
+```
+
+这完全将您的代码与Spring aop耦合在一起，并且使class本身意识到它正在AOP上下文中使用。在创建代理时，它还需要一些其他配置，如以下示例所示：
+
+```java
+public class Main {
+
+    public static void main(String[] args) {
+        ProxyFactory factory = new ProxyFactory(new SimplePojo());
+        factory.addInterface(Pojo.class);
+        factory.addAdvice(new RetryAdvice());
+        factory.setExposeProxy(true);
+
+        Pojo pojo = (Pojo) factory.getProxy();
+        // this is a method call on the proxy!
+        pojo.foo();
+    }
+}
+```
+
+最后，必须指出的是，AspectJ 没有这个自我调动问题，因为它不是基于代理的AOP框架。
+
+## 5.9. 以编程方式创建@AspectJ切面的代理
+
+除了通过使用`<aop:config>`或`<aop:aspectj-autoproxy>`来声明配置中的切面，还可以通过编程方式创建通知目标对象的代理。有关Spring AOP API的全部详细信息，请参见下一章。在这里，我们要专注于使用@AspectJ 切面自动创建代理的能力。
+
+您可以使用org.springframework.aop.aspectj.annotation.AspectJProxyFactory类来为一个或多个@AspectJ 切面通知的目标对象创建代理。该class的基本用法非常简单，如以下示例所示：
+
+```java
+// create a factory that can generate a proxy for the given target object
+AspectJProxyFactory factory = new AspectJProxyFactory(targetObject);
+
+// add an aspect, the class must be an @AspectJ aspect
+// you can call this as many times as you need with different aspects
+factory.addAspect(SecurityManager.class);
+
+// you can also add existing aspect instances, the type of the object supplied must be an @AspectJ aspect
+factory.addAspect(usageTracker);
+
+// now get the proxy object...
+MyInterfaceType proxy = factory.getProxy();
+```
+
+有关更多信息，请参见[javadoc](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/aop/aspectj/annotation/AspectJProxyFactory.html)。
+
+
+
+## 5.10. Spring应用程序使用AspectJ
+
+到目前为止，我们在本章中涵盖的所有内容都是纯Spring AOP。在本节中，我们查看如何使用AspectJ 编译器或织入器，如果您的需求超出了Spring AOP提供的设施。
+
+Spring带有小AspectJ 切面库，在您的发行版中可以独立使用spring-aspects.jar。您需要将其添加到您的classpath中，以便使用其中的切面。 [Using AspectJ to Dependency Inject Domain Objects with Spring](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-atconfigurable)和 [Other Spring aspects for AspectJ](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ajlib-other) 讨论该库的内容以及如何使用它。 [Configuring AspectJ Aspects by Using Spring IoC](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-configure)讨论了如何使用AspectJ编译器织入的依赖性注入切面。最后，在 [Load-time Weaving with AspectJ in the Spring Framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-ltw)为使用AspectJ的Spring加载时织入应用程序提供了介绍。
+
+### 5.10.1. 在Spring中使用AspectJ 依赖注入domain对象
+
+Spring容器实例化和配置应用程序上下文中定义的bean。考虑到包含要应用的配置的bean定义的名称，也可以要求bean factory配置预先存在的对象。spring-aspects.jar包含注解驱动的切面，该切面利用了这种能力以允许对任何对象的依赖注入。这种支持旨在用于在任何容器控制之外创建的对象。域对象通常属于此类别，因为它们通常是使用new操作符或通过ORM工具编程创建的。
+
+@Configurable的注解标记使得类有Spring驱动配置的资格。在最简单的情况下，您可以将其纯粹用作标记注解，如以下示例所示：
+
+```java
+package com.xyz.myapp.domain;
+
+import org.springframework.beans.factory.annotation.Configurable;
+
+@Configurable
+public class Account {
+    // ...
+}
+```
+
+当其用作标记接口时，Spring通过使用bean定义（通常是原型作用域）的全限定类名称（com.xyz.myapp.domain.Account）配置被注解类的新实例。由于bean的默认名称是其类型的全限定的名称，因此声明原型定义的一种方便方法是省略id属性，如以下示例所示：
+
+```java
+<bean class="com.xyz.myapp.domain.Account" scope="prototype">
+    <property name="fundsTransferService" ref="fundsTransferService"/>
+</bean>
+```
+
+如果要明确指定要使用的原型bean定义的名称，则可以在注解中直接定义，如下示例显示：
+
+```java
+package com.xyz.myapp.domain;
+
+import org.springframework.beans.factory.annotation.Configurable;
+
+@Configurable("account")
+public class Account {
+    // ...
+}
+```
+
+Spring现在寻找一个名为“account”的bean定义，并将其用作配置新Account实例的定义。
+
+您也可以使用autowiring 来避免完全指定专用的Bean定义。要使Spring应用autowiring ，请使用@Configurable的autowire属性。您可以指定@Configurable(autowire=Autowire.BY_TYPE)或@Configurable(autowire=Autowire.BY_NAME)，分别按类型或按名称进行自动注入。作为替代方案，最好通过@Autowired或@Inject在字段或方法级别定义注解驱动的依赖注入。
+
+最后，您可以通过使用dependencyCheck属性（例如，@Configurable(autowire=Autowire.BY_NAME,dependencyCheck=true)）启用Spring依赖检查。如果此属性设置为true，Spring 验证所有属性在他们被配置后（不是原型或集合）。
+
+请注意，只使用该注解本身无济于事。spring-aspects.jar中的AnnotationBeanConfigurerAspect在注解存在时起作用。本质上，该切面说：“从用@Configurable注解的类型的新对象的初始化返回后，根据注解的属性配置新创建的对象”。在这种情况下，“初始化”是指新实例化的对象（例如，new实例化的对象）以及正在进行反序列化的对象（例如，通过 [readResolve()](https://docs.oracle.com/javase/8/docs/api/java/io/Serializable.html)）。
+
+> :information_source:上面段落中的关键短语之一是“本质上”。在大多数情况下，“从新对象的初始化返回之后”的确切语义是可以的。在这种情况下，“初始化”意味着在对象构造后将依赖项注入。这意味着依赖项在类的构造体中不可用。如果您希望在构造函数实体运行之前注入依赖项，并因此可以在构造函数的正文中使用，则需要在@Configurable声明上定义它，如下：
+>
+> ```java
+> @Configurable(preConstruction = true)
+> ```
+>
+> 您可以在 [AspectJ Programming Guide](https://www.eclipse.org/aspectj/doc/next/progguide/index.html)的 [in this appendix](https://www.eclipse.org/aspectj/doc/next/progguide/semantics-joinPoints.html)中找到有关AspectJ 中各种切点类型的语言语义的更多信息。
+
+为此，必须使用AspectJ 织入器将带注解的类型进行织入。您可以使用构建时的Ant 或Maven 任务来执行此操作（例如， [AspectJ Development Environment Guide](https://www.eclipse.org/aspectj/doc/released/devguide/antTasks.html)）或加载时的织入（请参阅 [Load-time Weaving with AspectJ in the Spring Framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-ltw)）。AnnotationBeanConfigurerAspect本身需要通过Spring配置以获取用于配置新对象的 bean factory的引用。如果使用基于Java的配置，则可以将@EnableSpringConfigured添加到任何@Configuration类，如下：
+
+```java
+@Configuration
+@EnableSpringConfigured
+public class AppConfig {
+}
+```
+
+如果您喜欢基于XML的配置，则spring上下文名称空间定义了一个方便的`context:spring-configured`元素，您可以使用以下方式：
+
+```xml
+<context:spring-configured/>
+```
+
+在对该切面进行配置之前，创建的@Configurable对象的实例导致发出的消息发送给调试日志，并且没有对对象进行配置。一个示例可能是Spring配置中的bean，当Spring初始化域对象时会创建域对象。在这种情况下，您可以使用depends-on属性来手动指定bean依赖的配置切面。以下示例显示了如何使用depends-on属性：
+
+```xml
+<bean id="myService"
+        class="com.xzy.myapp.service.MyService"
+        depends-on="org.springframework.beans.factory.aspectj.AnnotationBeanConfigurerAspect">
+
+    <!-- ... -->
+
+</bean>
+```
+
+> :information_source:除非您真的要在运行时依靠其语义，否则请勿通过Bean配置器切面激活@Configurable处理。特别是，请确保您在Spring容器中的常规bean上不使用@Configurable。这样做会导致双初始化，一次通过容器，一次通过切面。
+
+**单元测试`Configurable` 对象**
+
+@Configurable支持的目标之一是在没有与硬编码查找相关的困难的情况下对域对象进行独立的单元测试。如果@Configurable类尚未通过AspectJ织入，则注解在单位测试过程中没有影响。您可以在测试的对象中设置mock 或stub 属性引用，并正常测试。如果@Configurable类已通过AspectJ织入，则您仍然可以正常在容器外部进行单元测试，但是每次构造一个@Configurable对象，都会提示它尚未在Spring配置的警告消息。
+
+**与多应用程序上下文一起工作**
+
+用于实现@Configurable支持的AnnotationBeanConfigurerAspect是AspectJ 单例切面。单例切面的作用域与static成员的作用域相同：每个classloader有一个切面实例来定义类型。这意味着，如果您在同一classloader层次结构中定义了多个应用程序上下文，则需要考虑在哪里定义@EnableSpringConfigured的bean以及将spring-aspects.jar放置在哪个classpath。
+
+考虑具有共享父级应用程序上下文的典型Spring Web应用程序配置，该配置定义了共同的业务服务，支持这些服务所需的一切以及每个Servlet的一个子应用程序上下文（其中包含该servlet的特定定义）。所有这些上下文都在同一类加载层次结构中共存，因此AnnotationBeanConfigurerAspect只能对其中一个进行引用。在这种情况下，我们建议在共享（parent）应用程序上下文中定义@EnableSpringConfigured bean。这定义了您可能想要注入域对象的服务。结果是，您无法通过使用@Configurable 机制来配置针对子（Servlet特定）上下文中定义的bean的域对象（这可能不是您想做的事情）。
+
+在同一容器中部署多个Web应用程序时，请确保每个Web应用程序通过使用自己的classLoader加载spring-aspects.jar中的类型（例如，通过将spring-aspects.jar放置在`'WEB-INF/lib'`中）。如果仅将spring-aspects.jar添加到容器范围的classpath （因此由共享parent classloader），则所有Web应用程序都共享相同的切面实例（这可能不是您想要的）。
+
+### 5.10.2. 其他的Spring  AspectJ切面
 
 
 
